GH-20: Fix the dropdown overlap issue

--- a/src/legacy/style5.css
+++ b/src/legacy/style5.css
@@ -37,7 +37,7 @@
 }
 
 .react-tel-input .flag-dropdown.open {
-    z-index: 2;
+    z-index: 3;
     border: none;
     background-color: transparent;
 }
